// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codegen > emits Array.isArray + typeof for array | object | string unions 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashMixedUnion(value: number[] | { x: number } | string): string {
  const h = new Hasher();
  if (Array.isArray(value)) {
    h.u32(value.length);
    for (const _el of value) {
      h.f64(_el);
    }
  } else {
    if (typeof value === "object") {
      h.f64(value.x);
    } else if (typeof value === "string") {
      h.str(value);
    }
  }
  return h.finish();
}
"
`;

exports[`codegen > emits Array.isArray check for array | object unions 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashArrayOrObj(value: string[] | { length: number }): string {
  const h = new Hasher();
  if (Array.isArray(value)) {
    h.u32(value.length);
    for (const _el of value) {
      h.str(_el);
    }
  } else {
    h.f64(value.length);
  }
  return h.finish();
}
"
`;

exports[`codegen > emits Date hash with tag byte 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashWithDate(value: { created: Date }): string {
  const h = new Hasher();
  h.u8(0xD0);
  h.f64(value.created.getTime());
  return h.finish();
}
"
`;

exports[`codegen > emits Map hash with tag byte and sorted entries 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashWithMap(value: { scores: Map<string, number> }): string {
  const h = new Hasher();
  h.u8(0xD1);
  const _entrys = [...value.scores.entries()].sort((a, b) => a[0] < b[0] ? -1 : a[0] > b[0] ? 1 : 0);
  h.u32(_entrys.length);
  for (const _entry of _entrys) {
    h.str(_entry[0]);
    h.f64(_entry[1]);
  }
  return h.finish();
}
"
`;

exports[`codegen > emits Set hash with tag byte and sorted values 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashWithSet(value: { tags: Set<string> }): string {
  const h = new Hasher();
  h.u8(0xD2);
  const _sorted = [...value.tags.values()].sort();
  h.u32(_sorted.length);
  for (const _el of _sorted) {
    h.str(_el);
  }
  return h.finish();
}
"
`;

exports[`codegen > emits instanceof + Array.isArray for Set | array union 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashSetOrArr(value: Set<string> | string[]): string {
  const h = new Hasher();
  if (value instanceof Set) {
    h.u8(0xD2);
    const _sorted = [...value.values()].sort();
    h.u32(_sorted.length);
    for (const _el of _sorted) {
      h.str(_el);
    }
  } else if (Array.isArray(value)) {
    h.u32(value.length);
    for (const _el of value) {
      h.str(_el);
    }
  }
  return h.finish();
}
"
`;

exports[`codegen > emits instanceof checks for Date | number union 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashDateOrNum(value: Date | number): string {
  const h = new Hasher();
  if (value instanceof Date) {
    h.u8(0xD0);
    h.f64(value.getTime());
  } else {
    h.f64(value);
  }
  return h.finish();
}
"
`;

exports[`codegen > emits instanceof checks for Map | object union 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashMapOrObj(value: Map<string, number> | { [key: string]: number }): string {
  const h = new Hasher();
  if (value instanceof Map) {
    h.u8(0xD1);
    const _entrys = [...value.entries()].sort((a, b) => a[0] < b[0] ? -1 : a[0] > b[0] ? 1 : 0);
    h.u32(_entrys.length);
    for (const _entry of _entrys) {
      h.str(_entry[0]);
      h.f64(_entry[1]);
    }
  } else {
    const _keys = Object.keys(value).sort();
    h.u32(_keys.length);
    for (const _k of _keys) {
      h.str(_k);
      h.f64(value[_k]);
    }
  }
  return h.finish();
}
"
`;

exports[`codegen > generates composable version for recursive types 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

type TreeNode = { children: TreeNode[]; value: number };

export function _hashTreeNode(h: Hasher, value: { children: TreeNode[]; value: number }): void {
  h.u32(value.children.length);
  for (const _el of value.children) {
    _hashTreeNode(h, _el);
  }
  h.f64(value.value);
}

export function hashTreeNode(value: { children: TreeNode[]; value: number }): string {
  const h = new Hasher();
  _hashTreeNode(h, value);
  return h.finish();
}
"
`;

exports[`codegen > generates composable version when explicitly marked 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function _hashPoint(h: Hasher, value: { x: number; y: number }): void {
  h.f64(value.x);
  h.f64(value.y);
}

export function hashPoint(value: { x: number; y: number }): string {
  const h = new Hasher();
  _hashPoint(h, value);
  return h.finish();
}
"
`;

exports[`codegen > generates correct code for nested index signatures without variable shadowing 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashNestedMap(value: { [key: string]: { [key: string]: number } }): string {
  const h = new Hasher();
  const _keys = Object.keys(value).sort();
  h.u32(_keys.length);
  for (const _k of _keys) {
    h.str(_k);
    const _keys1 = Object.keys(value[_k]).sort();
    h.u32(_keys1.length);
    for (const _k1 of _keys1) {
      h.str(_k1);
      h.f64(value[_k][_k1]);
    }
  }
  return h.finish();
}
"
`;

exports[`codegen > generates generic hash function with type params 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashBox<T extends { hash(h: Hasher): void }>(value: { value: T }): string {
  const h = new Hasher();
  value.value.hash(h);
  return h.finish();
}
"
`;

exports[`codegen > generates generic with existing constraint — intersects with hash 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashWrapper<T extends { id: number } & { hash(h: Hasher): void }>(value: { inner: T }): string {
  const h = new Hasher();
  value.inner.hash(h);
  return h.finish();
}
"
`;

exports[`codegen > generates hash for discriminated unions 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashShape(value: { kind: "circle"; radius: number } | { kind: "rect"; width: number; height: number }): string {
  const h = new Hasher();
  if (value.kind === "circle") {
    h.str(value.kind);
    h.f64(value.radius);
  } else if (value.kind === "rect") {
    h.str(value.kind);
    h.f64(value.width);
    h.f64(value.height);
  }
  return h.finish();
}
"
`;

exports[`codegen > generates hash for enum types 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashWithEnum(value: { status: "active" | "inactive" }): string {
  const h = new Hasher();
  if (typeof value.status === "string") {
    h.u8(0);
    h.str(value.status);
  } else {
    h.u8(1);
    h.f64(value.status);
  }
  return h.finish();
}
"
`;

exports[`codegen > generates hash for mixed object + index signature (named props absorbed by walker) 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashMixedIndex(value: { [key: string]: number | string }): string {
  const h = new Hasher();
  const _keys = Object.keys(value).sort();
  h.u32(_keys.length);
  for (const _k of _keys) {
    h.str(_k);
    if (typeof value[_k] === "number") {
      h.f64(value[_k]);
    } else if (typeof value[_k] === "string") {
      h.str(value[_k]);
    }
  }
  return h.finish();
}
"
`;

exports[`codegen > generates hash for nested arrays without variable shadowing 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashMatrix(value: { data: number[][] }): string {
  const h = new Hasher();
  h.u32(value.data.length);
  for (const _el of value.data) {
    h.u32(_el.length);
    for (const _el1 of _el) {
      h.f64(_el1);
    }
  }
  return h.finish();
}
"
`;

exports[`codegen > generates hash for nullable types 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashWithNull(value: { value: null | string }): string {
  const h = new Hasher();
  if (value.value !== null) {
    h.u8(1);
    h.str(value.value);
  } else {
    h.u8(0);
  }
  return h.finish();
}
"
`;

exports[`codegen > generates hash for optional properties 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashWithOptional(value: { name: string; nickname?: string }): string {
  const h = new Hasher();
  h.str(value.name);
  if (value.nickname !== undefined) {
    h.u8(1);
    h.str(value.nickname);
  } else {
    h.u8(0);
  }
  return h.finish();
}
"
`;

exports[`codegen > generates hash for primitive unions via typeof 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashStringOrNumber(value: number | string): string {
  const h = new Hasher();
  if (typeof value === "number") {
    h.f64(value);
  } else if (typeof value === "string") {
    h.str(value);
  }
  return h.finish();
}
"
`;

exports[`codegen > generates hash for pure index signatures 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashStringMap(value: { [key: string]: number }): string {
  const h = new Hasher();
  const _keys = Object.keys(value).sort();
  h.u32(_keys.length);
  for (const _k of _keys) {
    h.str(_k);
    h.f64(value[_k]);
  }
  return h.finish();
}
"
`;

exports[`codegen > generates hash for simple object with primitives 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashPoint(value: { x: number; y: number }): string {
  const h = new Hasher();
  h.f64(value.x);
  h.f64(value.y);
  return h.finish();
}
"
`;

exports[`codegen > generates hash for tuples 1`] = `
"// Auto-generated by ts-hash. Do not edit.
import { Hasher } from "ts-hash";

export function hashCoord(value: [number, number, string?]): string {
  const h = new Hasher();
  h.f64(value[0]);
  h.f64(value[1]);
  if (value[2] !== undefined) {
    h.u8(1);
    h.str(value[2]);
  } else {
    h.u8(0);
  }
  return h.finish();
}
"
`;
